# fase5

./: -remote  .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  README.md  README2.md  docker-compose.yml  dvc.yaml  params.yaml  prometheus.yml  pyproject.toml  readme_prometheus.md  requirements.txt
.github/workflows/: ci.yml
api/: main.py
data/golden_set/: real_estate_chat_golden_set.jsonl
data/metrics/: feature_contract.json  reproducibility_report.json  train_metrics.json  validation_dev.json  validation_prod.json  validation_test.json
data/rag/raw/: caracteristicas_imovel.md  comparacao_regioes.md  fatores_precificacao.md  infraestrutura_urbana.md  interpretacao_previsao.md  limitacoes_modelo.md  localizacao_bairros.md  preco_por_m2.md  regras_precificacao.md
docs/: ADVERSARIAL_TESTS.md  AGENT_REACT.md  AGENT_TOOLS.md  BENCHMARK_AGENT.md  ETAPA1_DADOS_BASELINE.md  FAIRNESS_EXPLAINABILITY.md  GOVERNANCE.md  LGPD_PLAN.md  LLM_SERVING_DECISION.md  MODEL_CARD.md  OWASP_MAPPING.md  RAG_DOCUMENTAL.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md  passo_a_passo_treino_dvc_precificador.pptx
evaluation/: __init__.py  benchmark_agent.py
models/: train.py  train_mlflow.py  validate_model.py
monitoring/alertmanager/: alertmanager.yml
monitoring/drifts/: drift.py
monitoring/grafana/dashboards/: prometheus-overview.json
monitoring/prometheus/: alertrules.yml  prometheus.yml
notebooks/model_validation/: compare_models.ipynb
scripts/: build_rag_index.py  check_reproducibility.py  create_task_tracker.mjs  create_training_workflow_ppt.mjs  test_gemini.py
src/: config.py
src/agent/: llm.py  orchestrator.py  prompts.py  react_agent.py  runtime.py  tools.py
src/data/: 0ingest.py  1extract_all_itbi.py  2clean_all.py  README.md  clean.py
src/data/eda/: .gitignore
src/evaluation/: benchmark.py  llm_judge.py  ragas_eval.py
src/features/: build_features.py  build_features_minimal.py
src/precificador_imobiliario.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag/: build_index.py  chunking.py  document_loader.py  embeddings.py  rag_pipeline.py  retriever.py  vector_store.py
src/security/: __init__.py  guardrails.py  input_guardrails.py  output_guardrails.py  pii_detection.py  prompt_injection.py
src/serving/: Dockerfile
src/training/: evaluation.py  promote_model.py  splits.py  train_mlflow.py  validate_model.py
tests/: README.md
tests/integration/: test_api_endpoints.py  test_chat_endpoint.py
tests/unit/: test_adversarial_scenarios.py  test_agent_tools.py  test_api.py  test_build_rag_index.py  test_data_cleaning.py  test_eda_valor_m2_bairro.py  test_evaluation.py  test_feature_contract.py  test_guardrails.py  test_llm_config.py  test_model.py  test_promote_model.py  test_rag_documental.py  test_react_agent.py  test_temporal_holdout.py
(+4 files in other folders)
